--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "ejs": "^3.1.10",
     "express": "^5.2.1",
     "mongodb": "^7.0.0",
+    "mongoose": "^9.0.2",
     "nodemon": "^3.1.11"
   }
 }
