--- a/package.json
+++ b/package.json
@@ -20,10 +20,13 @@
   },
   "homepage": "https://github.com/rohankosti/NextGenHR#readme",
   "dependencies": {
+    "connect-mongo": "^6.0.0",
+    "connect-mongodb-session": "^5.0.0",
     "dotenv": "^17.2.3",
     "ejs": "^3.1.10",
     "express": "^5.2.1",
-    "mongodb": "^7.0.0",
+    "express-session": "^1.18.2",
+    "mongodb": "^6.21.0",
     "mongoose": "^9.0.2",
     "nodemon": "^3.1.11"
   }
