--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "express-session": "^1.18.2",
     "mongodb": "^6.21.0",
     "mongoose": "^9.0.2",
+    "multer": "^2.0.2",
     "nodemon": "^3.1.11"
   }
 }
